tests are generated